Add InterestedFieldDetail in Study entity
